# CENG477-Intr-to-Computer-Graphics-Assignments

ceng477-hw1/: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Light.cpp  Light.h  Makefile  Material.h  Ray.cpp  Scene.cpp  Scene.h  Shape.cpp  Shape.h  VectorOperations.cpp  VectorOperations.h  defs.h  members.txt
ceng477-hw2/: .gitignore  CMakeLists.txt  Makefile  README.md  Scene.cpp  Scene.h  Vec3.cpp  Vec3.h
